--- a/parceiros.html
+++ b/parceiros.html
@@ -58,7 +58,7 @@
         </div>
     </header>
 
-    <section class="blog-hero spad set-bg" data-setbg="imagens/Parceiros3.jpg">
+    <section class="blog-hero spad set-bg" data-setbg="imagens/parceiros3.jpg">
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-8">
