--- a/sobre.html
+++ b/sobre.html
@@ -65,7 +65,7 @@
                         <h2>Sobre</h2>
                         <div class="breadcrumb__links">
                             <a href="index.html">Home</a>
-                            <span>About</span>
+                            <span>Sobre</span>
                         </div>
                     </div>
                 </div>
