--- a/contato.html
+++ b/contato.html
@@ -134,7 +134,7 @@
                             <input type="text" placeholder="Nome" required>
                             <input type="text" placeholder="Email" required>
                             <input type="text" placeholder="Motivo" required>
-                            <textarea placeholder="Message"></textarea>
+                            <textarea placeholder="Menssagem"></textarea>
                             <button type="submit" class="site-btn">Enviar</button>
                         </form>
                     </div>
